unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>