unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Accounting_Year__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Year__c</fullName>
    <label>Accounting Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>