unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Billing__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing__c</fullName>
    <label>Billing</label>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipLabel>Transaction Archives</relationshipLabel>
    <relationshipName>Transaction_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>