unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Billing_Cash_Receipt__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Cash_Receipt__c</fullName>
    <label>Billing Cash Receipt</label>
    <referenceTo>AcctSeed__Billing_Cash_Receipt__c</referenceTo>
    <relationshipName>BCR_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>