unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Cash_Flow_Category__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Cash_Flow_Category__c</fullName>
    <label>Cash Flow Category</label>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipName>CFC_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>