unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Financial_Cube__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Financial_Cube__c</fullName>
    <label>Financial Cube</label>
    <referenceTo>AcctSeed__Financial_Cube__c</referenceTo>
    <relationshipName>FC_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>