unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Foreign_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Foreign_Amount__c</fullName>
    <label>Foreign Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>