unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Foreign_Currency__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Foreign_Currency__c</fullName>
    <label>Foreign Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>