unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Account__c</fullName>
    <label>GL Account</label>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipName>GL_Account_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>