unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
    <label>GL Variable 1</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipName>GLAV_1_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>