unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipName>Ledger_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>