unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Note__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Note__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>