unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Payable__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payable__c</fullName>
    <label>Payable</label>
    <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
    <relationshipLabel>Transaction Archives</relationshipLabel>
    <relationshipName>Transaction_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>