unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeed__Quantity__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>