unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeedERP__Outbound_Inventory_Movement__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Outbound_Inventory_Movement__c</fullName>
    <label>Outbound Inventory Movement</label>
    <referenceTo>AcctSeedERP__Outbound_Inventory_Movement__c</referenceTo>
    <relationshipName>Outbound_Inventory_Movement_Trans</relationshipName>
    <type>Lookup</type>
</CustomField>