unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeedERP__Purchase_Order_Inventory_Movement__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Purchase_Order_Inventory_Movement__c</fullName>
    <label>Purchase Order Inventory Movement</label>
    <referenceTo>AcctSeedERP__Purchase_Order_Inventory_Movement__c</referenceTo>
    <relationshipName>Purchase_Order_Inventory_Movement_Trans</relationshipName>
    <type>Lookup</type>
</CustomField>