unpackaged/main/default/objects/AcctSeed__Transaction_Archive__b/fields/AcctSeedERP__Sales_Order_Inventory_Movement__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Sales_Order_Inventory_Movement__c</fullName>
    <label>Sales Order Inventory Movement</label>
    <referenceTo>AcctSeedERP__Sales_Order_Inventory_Movement__c</referenceTo>
    <relationshipLabel>Transaction Archives</relationshipLabel>
    <relationshipName>Transaction_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>